# ece4670_final

./: CMakeLists.txt  README.md
final/: CMakeLists.txt  Schedule_FM_DAC - Copy.c  bio.c  pt_cornell_rp2040_v1.h
final/python_files/: hmm.py  length_agg.py  note_agg.py
